; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_pcwd_usb.c_usb_pcwd_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_pcwd_usb.c_usb_pcwd_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@expect_release = common dso_local global i32 0, align 4
@usb_pcwd_device = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Unexpected close, not stopping watchdog!\0A\00", align 1
@is_active = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @usb_pcwd_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usb_pcwd_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %5 = load i32, i32* @expect_release, align 4
  %6 = icmp eq i32 %5, 42
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @usb_pcwd_device, align 4
  %9 = call i32 @usb_pcwd_stop(i32 %8)
  br label %14

10:                                               ; preds = %2
  %11 = call i32 @pr_crit(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* @usb_pcwd_device, align 4
  %13 = call i32 @usb_pcwd_keepalive(i32 %12)
  br label %14

14:                                               ; preds = %10, %7
  store i32 0, i32* @expect_release, align 4
  %15 = call i32 @clear_bit(i32 0, i32* @is_active)
  ret i32 0
}

declare dso_local i32 @usb_pcwd_stop(i32) #1

declare dso_local i32 @pr_crit(i8*) #1

declare dso_local i32 @usb_pcwd_keepalive(i32) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
